bad-ingress-scanner/bad-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-01
spec:
  rules:
  - host: test-01.example.com
    http:
      paths:
      - backend:
          service:
            name: test-01-example-com
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-02
spec:
  rules:
  - host: test-02.example.com
    http:
      paths:
      - backend:
          service:
            name: test-02-example-com
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test-02.example.com
    secretName: test-02-example-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-02-dup
spec:
  rules:
  - host: test-02.example.com
    http:
      paths:
      - backend:
          service:
            name: test-02-example-com
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test-02.example.com
    secretName: test-02-example-com
